syntax = "proto3";

option csharp_namespace = "GrpcMessager";

package SubscriberProto;

service SubscriberProto {
  rpc Subscribe(SubscribeRequest) returns (SubscribeReply);
}

message SubscribeRequest {
  string topic = 1;
  string address = 2;
}

message SubscribeReply {
  bool isConnected = 1;
}
